# van-monitor

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  push-to-github.ps1  sdkconfig  sdkconfig.defaults
.github/: CODEOWNERS
.github/workflows/: release.yml
components/display/: CMakeLists.txt  DisplayContext.cpp  DisplayContext.hpp  Theme.hpp  idf_component.yml
components/display/drivers/: cst816d.cpp  cst816d.hpp
components/display/screens/: CalibrateScreen.cpp  CalibrateScreen.hpp  DashboardScreen.cpp  DashboardScreen.hpp  SystemScreen.cpp  SystemScreen.hpp
docs/: van_monitor_getting_started.docx
main/: ActivityManager.cpp  ApplicationContext.cpp  ApplicationContext.hpp  CMakeLists.txt  Kconfig.projbuild  LoggingConfig.cpp  LoggingConfig.hpp  app_main.cpp  idf_component.yml
main/app/: ActivityManager.cpp  ActivityManager.hpp  AppState.hpp  ApplicationContext.cpp  ApplicationContext.hpp  CalibrateHandler.cpp  CalibrateHandler.hpp  ImuSensor.cpp  ImuSensor.hpp  StatusHandler.cpp  StatusHandler.hpp  TemperatureHandler.cpp  TemperatureHandler.hpp  VenusConfigHandler.cpp  VenusConfigHandler.hpp  VenusMqttClient.cpp  VenusMqttClient.hpp  WaterLevelSensor.cpp  WaterLevelSensor.hpp
main/app_files/: AppFileTable.cpp  AppFileTable.hpp
main/app_files/files/: app.js  app_index.html  styles.css
