file(GLOB_RECURSE APP_EMBED_FILES "app_files/files/*")

idf_component_register(
    SRCS
        app_main.cpp
        LoggingConfig.cpp
        app/ApplicationContext.cpp
        app/ActivityManager.cpp
        app/TemperatureHandler.cpp
        app/StatusHandler.cpp
        app/CalibrateHandler.cpp
        app/WaterLevelSensor.cpp
        app_files/AppFileTable.cpp
    REQUIRES
        auth
        device
        display
        esp_platform
        network_store
        framework
        framework_files
        http
        http_types
        logger
        ota
        wifi_manager
        esp_adc
        esp_driver_tsens
    INCLUDE_DIRS
        .
        app
        app_files
    EMBED_FILES
        ${APP_EMBED_FILES}
)
